--- a/pages/stories/stories.wxml
+++ b/pages/stories/stories.wxml
@@ -2,13 +2,27 @@
   <view class="header">Welcome to Batch {{batch_number}} 👋!</view>
   <view class="time">{{todays_date}}</view>
   <!-- list rendered stories -->
-  <view wx:for="{{stories}}" wx:for-item="story" class="card-product" bindtap="goToShow" data-index="{{index}}">
+  <!-- <view wx:for="{{stories}}" wx:for-item="story" class="card-product" bindtap="goToShow" data-id="{{story.id}}">
     <image src="https://picsum.photos/200" />
     <view class="card-product-infos">
       <view class="h2">{{story.title}}</view>
-      <view class="p">{{story.description}}</view>
+      <view class="p">{{story.short_body}}</view>
+      <view class="small">{{story.author}}</view>
     </view>
-  </view>
+  </view> -->
+
+  <block wx:for="{{stories}}" wx:for-item="story">
+    <navigator url="/pages/show/show?id={{story.id}}">
+      <view class="card-product">
+        <image src="https://picsum.photos/200" />
+        <view class="card-product-infos">
+          <view class="h2">{{story.title}}</view>
+          <view class="p">{{story.short_body}}</view>
+          <view class="small">{{story.author}}</view>
+        </view>
+      </view>
+    </navigator>
+  </block>
   
   <view class="like-counter">
 
