--- a/pages/edit/edit.wxml
+++ b/pages/edit/edit.wxml
@@ -1,17 +1,17 @@
 <form bindsubmit="formSubmit" bindreset="formReset">
   <view class="section">
     <view class="section__title">Title</view>
-    <input name="title" placeholder="Your story title here...." />
+    <input name="title" placeholder="Your story title here...." value="{{story.title}}" />
   </view>
 
   <view class="section">
     <view class="section__title">Body</view>
-    <textarea style="width: 100%;" maxlength="-1" name="body" placeholder="Your story description here..." />
+    <textarea style="width: 100%;" maxlength="-1" name="body" placeholder="Your story description here..." value="{{story.body}}" />
   </view>
 
   <view class="section">
     <view class="section__title">Author</view>
-    <input name="author" placeholder="Who wrote it..." />
+    <input name="author" placeholder="Who wrote it..." value="{{story.author}}" />
   </view>
   
   <view class="btn-area">
