--- a/pages/show/show.wxss
+++ b/pages/show/show.wxss
@@ -4,7 +4,8 @@
   background-repeat: no-repeat;
   padding: 0 30rpx;
   background-color: pink !important;
-  height: 100vh;
+  height: 500rpx;
+  /* height: 100vh; */
   text-align: center;
 }
 
@@ -43,4 +44,28 @@
   box-shadow: 0 0 20rpx rgba(0,0,0,0.3);
   padding: 15rpx;
   width: 50rpx; height: 50rpx;
+}
+
+form {
+  padding: 50rpx;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.section {
+  box-shadow: 2rpx 2rpx 10rpx lightgrey;
+  margin-top: 50rpx;
+  padding: 20rpx;
+}
+
+.btn-area {
+  margin-top: 50rpx;
+  display: flex;
+  justify-content: space-between;
+}
+
+button {
+  width: 20vw;
 }
